<resources>
    <string name="app_name">Sweet Alert</string>

    <!-- Button Text -->
    <string name="basic_mesage">Basic Mesage</string>
    <string name="text_under">Text under</string>
    <string name="error_message">Error Message</string>
    <string name="alert_message">Alert Message</string>
    <string name="success">Success</string>
    <string name="custom_icon">Custom Icon</string>
    <string name="confirm_button">Confirm Button</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="change_dialog_style">Change Dialog Style</string>
</resources>
