<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btn_sweet_alert_basic_massage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:layout_margin="5dp"
        android:text="@string/basic_mesage"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_sweet_alert_txt_under"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:text="@string/text_under"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/btn_sweet_alert_error_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark"
        android:textColor="@android:color/white"
        android:text="@string/error_message"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/btn_sweet_alert_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark"
        android:textColor="@android:color/white"
        android:text="@string/alert_message"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/btn_sweet_alert_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:textColor="@android:color/white"
        android:text="@string/success"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/btn_sweet_alert_custom_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:text="@string/custom_icon"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/btn_sweet_alert_confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:text="@string/confirm_button"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/btn_sweet_alert_cancel_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:text="@string/cancel_button"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/btn_sweet_alert_change_dialg_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:text="@string/change_dialog_style"
        android:layout_margin="5dp"/>


</LinearLayout>